# Sentinel

./: .env.example  .gitignore  HANDOFF.md  README.md  conftest.py  package-lock.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: governance_agent.py  patch_agent.py  semantic_agent.py  static_agent.py  symbolic_agent.py  threat_pattern_agent.py
api/: main.py
contracts/: SafeVault.sol  UnpatchableVault.sol  UnpatchableVault_exploit.js
contracts/proxy/: UUPSProxy.sol
core/: backboard_llm.py  database.py  kb.py  llm.py  mongo_vector_store.py
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
deploy/: deployer.py
graph/: correlation.py  healing_graph.py  runner.py  state.py
scripts/: check_confidence.py  check_routing.py  demo_all.py  demo_runner.py  deploy_unpatchable.js  deploy_vault.js  diagnose.py
self-healing-contracts/: .env  .env.example  hardhat.config.js  package.json  requirements.txt
self-healing-contracts/agents/: governance_agent.py  symbolic_agent.py  threat_pattern_agent.py
self-healing-contracts/api/: main.py
self-healing-contracts/cache/: solidity-files-cache.json
self-healing-contracts/chroma_db/: chroma.sqlite3
self-healing-contracts/contracts/: VulnerableVault.sol
self-healing-contracts/core/: event_bus.py  kb.py  monitor.py  validator.py
self-healing-contracts/dashboard/: index.html  package-lock.json  package.json  vite.config.js
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_unpatchable.py
(+34 files in other folders)
