[project]
name = "self-healing-contracts"
version = "0.1.0"
description = "AI pipeline that detects and auto-patches Solidity vulnerabilities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # LLM / LangChain
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=0.4",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=1.8",
    "httpx>=0.27",
    # Blockchain
    "web3>=7.0",
    "py-solc-x>=2.0",
    # Vector DB
    "chromadb>=0.6",
    # Config / infra
    "python-dotenv>=1.0",
    "redis>=5.0",
    "fakeredis>=2.35.1",
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "deploy", "graph"]
